fixed layout bugs in mychannel and user channels, change about us into contact us

--- a/public/css/myStyle.css
+++ b/public/css/myStyle.css
@@ -1155,7 +1155,7 @@ center;     margin: 0 auto; }
 }
 
 .channel-content {
-    min-height: 250px;
+    min-height: 280px;
 }
 
 .span-tags {
@@ -3067,23 +3067,31 @@ canvas.thumb-1:hover,  canvas.thumb-2:hover,  canvas.thumb-3:hover {
 
 }
 /*to remain footer on bottom*/
-
+html,
+body {
+    margin:0;
+    padding:0;
+    height:100%;
+}
+#whole-wrapper {
+    min-height:100%;
+    position:relative;
+}
 #header {
-    background:#ededed;
     padding:10px;
 }
-#content {
-    margin-top: 0;
-
+#content {    
+    padding-bottom:50px; /* Height of the footer element */
 }
 #footer {
-    margin-top: 20px;
+    background:#ffab62;
     width:100%;
     height:100px;
     position:absolute;
-    bottom:0!important;
+    bottom:0;
     left:0;
 }
+
 
 @-webkit-keyframes slideInDown-e {
   0% {
